# PostLens

./: .gitignore  LICENSE  README.md  README_CN.md  project_structure.md  pubspec.yaml  test_quill.dart
.github/workflows/: build.yml
.workbuddy/memory/: 2026-06-02.md
android/app/: build.gradle.kts
assets/certs/: ca.crt  ca.key
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: app_theme.dart  intents.dart
lib/core/utils/: toast_utils.dart
lib/data/local/: database_helper.dart  import_export_service.dart
lib/data/network/: certificate_manager.dart  (+3 more)
lib/utils/: code_highlighter.dart  format_utils.dart  formatter.dart  import_helper.dart  process_helper.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  proxy_kernel.rs  test_client.rs  test_proxy.rs  test_rcgen_ca.rs  test_uri.rs
rust/src/api/: mod.rs  proxy.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_post_lens.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_post_lens.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
(+323 files in other folders)
