[package]
name = "rust_lib_post_lens"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
async-compression = { version = "0.4", features = ["tokio", "gzip", "deflate", "brotli", "zstd"] }
bytes = "1"
flate2 = "1"
flutter_rust_bridge = "=2.12.0"
futures-util = "0.3"
h2 = "0.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "webpki-tokio", "aws-lc-rs", "tls12"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rcgen = { version = "0.12", features = ["pem", "x509-parser"] }
rustls = "0.23"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tower-service = "0.3"
webpki-roots = "0.26"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[[bin]]
name = "test_uri"
path = "src/test_uri.rs"

[[bin]]
name = "test_client"
path = "src/test_client.rs"

[[bin]]
name = "test_proxy"
path = "src/test_proxy.rs"


